--- a/bootstrap-part1/3/Exercice3.html
+++ b/bootstrap-part1/3/Exercice3.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercice2</title>
+    <title>Exercice3</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -13,7 +13,8 @@
 <body>
     <div class="container-fluid">
         <h2 class=" text-center"> Formations by "La Manu"</h2>
-        <div class="text-center" bk="cyan"><span>C#</span><span>.NET</span></div>
+        <h4 class="text-center  "><span class="bg-info text-white">C#</span> <span></span><span class="bg-info text-white">.NET</span></h4>
+
 
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
