--- a/bootstrap-part1/3/Exercice3.html
+++ b/bootstrap-part1/3/Exercice3.html
@@ -13,9 +13,7 @@
 <body>
     <div class="container-fluid">
         <h2 class=" text-center"> Formations by "La Manu"</h2>
-        <h4 class="text-center  "><span class="bg-info text-white">C#</span> <span></span><span class="bg-info text-white">.NET</span></h4>
-
-
+        <div class="text-center" bk="cyan"><span class=" badge bg-info text-white ">C#</span><span> </span><span class=" badge bg-info text-white ">.NET</span></div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </body>
